@josiasveras [Task: Atualizar pom.xml]